--- a/census-ui/src/assets/style.css
+++ b/census-ui/src/assets/style.css
@@ -4,9 +4,11 @@ html{
 body {
 	font-size: 1em;
 	margin:0;
-	color:white;
 	overflow-x: hidden;
-	background-color: rgba(0,0,0,0.08);
+	font-family: 'Roboto', sans-serif;	
+}
+*{
+	font-family: 'Roboto', sans-serif!important;
 }
 a{
 	cursor: pointer;
